tests/test_enum/bad/output/quick_pattern_2.catala_en.A.Interpret
[ERROR] Error during typechecking, incompatible types:
--> F
--> E

Error coming from typechecking the following expression:
  --> test_enum/bad/quick_pattern_2.catala_en
   | 
28 |   definition y equals x with pattern Case3
   |                       ^
   + Article

Type F coming from expression:
  --> test_enum/bad/quick_pattern_2.catala_en
   | 
28 |   definition y equals x with pattern Case3
   |                       ^
   + Article

Type E coming from expression:
  --> test_enum/bad/quick_pattern_2.catala_en
   | 
17 |   context x content E
   |                     ^
   + Article
